// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`malformed custom resolver in project config missing resolveSnapshotPath throws  1`] = `
"<bold>Custom snapshot resolver must implement a \`resolveSnapshotPath\` function.</>
Documentation: https://facebook.github.io/jest/docs/en/configuration.html#snapshotResolver"
`;

exports[`malformed custom resolver in project config missing resolveTestPath throws  1`] = `
"<bold>Custom snapshot resolver must implement a \`resolveTestPath\` function.</>
Documentation: https://facebook.github.io/jest/docs/en/configuration.html#snapshotResolver"
`;
